# auth-user-udf

./: .gitignore  README.md
hive-udf/: README.md  build.sh  pom.xml
hive-udf/src/main/java/com/cloudera/hive/udf/: HiveSentrySubjectNameGenericUDF.java  HiveSentrySubjectNameUDF.java
impala-udf/: CMakeLists.txt  README.md  impala-user-shortname-udf.cc  impala-user-shortname-udf.h
